--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -25,7 +25,7 @@ body {
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
     font-weight: 600;
     cursor: pointer;
-    transition: background-color .2s ease;
+    transition: background-color 0.2s ease;
 }
 
 .btn-default:hover {
@@ -36,7 +36,15 @@ body {
     background-color: #700472;
 }
 
-
 section {
     padding: 10px 8%;
+}
+
+.section_title {
+    color: aqua;
+    font-size: 2.563rem;
+}
+
+.section_subtitle {
+    font-size: 2.1875rem;
 }
