--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -13,3 +13,24 @@
     gap: 24px;
     margin-top: 32px;
 }
+
+.dish {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px;
+    gap: 18px;
+    width: 25%;
+    padding: 20px;
+    background-color: #ffffffff;
+    box-shadow: 0px 0px 12px 4px rgb(0, 0, 0, 0.1);
+}
+
+.dish_heart {
+    position: absolute;
+    background-color: blueviolet;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.563rem;
+}
