--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -33,4 +33,36 @@
     align-items: center;
     justify-content: center;
     font-size: 1.563rem;
+    color: #fcb400;
+    width: 70px;
+    height: 70px;
+    right: -10px;
+    top: -10px;
+    border-radius: 0px 37.5px 0px 42.5px;
+}
+
+.dish_description {
+    color: #fcb400;
+    text-align: center;
+}
+
+.dish_rate {
+    color: #fcb400;
+}
+
+.dish_price {
+    display: flex;
+    align-items: center;
+    gap: 28px;
+}
+
+@media screen and (max-width: 1170px) {
+    #dishes {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    #dish {
+        width:  - calc(50% - 12px);
+    }
 }
