--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -6,3 +6,82 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
+
+.nav_item {
+    list-style: none;
+}
+
+.nav_link {
+    text-decoration: none;
+}
+
+.nav_link:hover {
+    color: chartreuse;
+}
+
+header {
+    position: relative;
+    padding: 1rem 2rem;
+}
+
+.nav_bar {
+    width: 100%;
+    height: 60px;
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.nav_ul {
+    display: flex;
+    gap: 2rem;
+}
+
+.logo img {
+    font-size: 2rem;
+}
+
+.btn_menu {
+    font-size: 1.5rem;
+    cursor: pointer;
+    display: none;
+}
+
+.drop_menu {
+    position: absolute;
+    right: 2rem;
+    top: 60px;
+    width: 300px;
+    height: 0;
+    background: rgba(21, 247, 0, 0.1);
+    backdrop-filter: blur(15px);
+    border-radius: 10px;
+    overflow: hidden;
+    transition: height .2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.drop_menu.open{
+    height: 240px;
+}
+
+.drop_menu li{
+    padding: 0.7rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+@media (max-width: 992px) {
+    .nav_bar .nav_ul{
+        display: none;
+    }
+    .nav_bar .btn_menu {
+        display: block;
+    }
+
+    .drop_menu {
+        display: block;
+    }
+}
