--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -11,8 +11,13 @@
     list-style: none;
 }
 
-.nav_link {
+.nav_ul a {
     text-decoration: none;
+    position: relative;
+    font-weight: 600;
+    transition: all ease 0.5s;
+    padding: 5px 5px;
+    margin: 0px 15px;
 }
 
 .nav_link:hover {
@@ -85,7 +90,6 @@ header {
     margin-inline: auto;
     display: flex;
     width: 100%;
-    display: none;
 }
 
 .main_content h1 {
@@ -116,7 +120,7 @@ header {
 }
 
 .main_imgdown img {
-    max-width: 600px;
+    max-width: 100%;
     margin-inline: auto;
     display: flex;
     width: 100%;
@@ -125,9 +129,42 @@ header {
 
 .btn {
     border-radius: 30px;
-    padding: 15px 30px;
-    background-color: aqua;
+    padding: 15px 25px;
+    background-color: rgb(6, 180, 180);
     border: none;
+    cursor: pointer;
+    font-weight: 600;
+    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease;
+}
+
+.btn:hover {
+    background-color: rgb(0, 223, 223);
+}
+
+.nav_ul a::after {
+    position: absolute;
+    content: "";
+    height: 3px;
+    bottom: 0px;
+    width: 0;
+    left: 50%;
+    transform: translate(-50%);
+    border-radius: 2px;
+    background: firebrick;
+    transition: all ease .50s;
+}
+
+.nav_ul a:hover::after {
+    width: 40%;
+}
+
+.nav_ul a.active {
+    color: firebrick;
+}
+
+.nav_ul a.active::after {
+    width: 40%;
 }
 
 @media (min-width: 992px) {
@@ -144,14 +181,6 @@ header {
     .main_img {
         grid-area: 1/2/2/3;
     }
-
-    .main_img img {
-        display: block;
-    }
-
-    .main_imgdown {
-        display: none;
-    }
 }
 
 @media (max-width: 992px) {
@@ -164,6 +193,9 @@ header {
 
     .drop_menu {
         display: block;
+    }
+    .main_img img {
+        max-width: 300px;
     }
 }
 
