--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -152,7 +152,7 @@ header {
     transform: translate(-50%);
     border-radius: 2px;
     background: firebrick;
-    transition: all ease .50s;
+    transition: all ease 0.5s;
 }
 
 .nav_ul a:hover::after {
@@ -165,6 +165,70 @@ header {
 
 .nav_ul a.active::after {
     width: 40%;
+}
+
+.card_header img {
+    width: 80px;
+    height: 50px;
+}
+
+.section_serve {
+    padding: 10rem 0;
+    background-color: aqua;
+}
+
+.section_data {
+    text-align: center;
+}
+
+.serve_title {
+    display: inline-block;
+    color: rgb(112, 10, 196);
+    font-weight: 500;
+    line-height: 2.4rem;
+    margin-bottom: 0.8rem;
+}
+
+.serve_description {
+    font-size: 2.4rem;
+    line-height: 4.4rem;
+    margin-bottom: 2.2rem;
+}
+
+.card_group {
+    margin: 2rem 0 2rem;
+    gap: 2rem;
+}
+
+.card {
+    padding: 3rem 2.2rem;
+    background-color: rgb(130, 146, 238);
+    border-radius: 1.2rem;
+}
+
+.card_header {
+    display: flex;
+}
+
+.card_header img {
+    margin: 0 auto;
+}
+
+.card_body {
+    text-align: center;
+    margin: 6rem 0 2rem;
+}
+
+.card_title {
+    font-size: 1.8rem;
+    line-height: 3.3rem;
+    font-weight: 600;
+    margin-bottom: 1.5rem;
+}
+
+.card_body p {
+    line-height: 2.5rem;
+    
 }
 
 @media (min-width: 992px) {
