--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -180,7 +180,7 @@ header {
 .section-metadata {
     text-align: center;
     font-weight: 500;
-    color: aqua;
+    color: rgb(255, 0, 0);
     line-height: 2.4rem;
     margin-bottom: 0.8rem;
 }
@@ -195,13 +195,15 @@ header {
 .card-group {
     margin: 7rem 0 2rem;
     gap: 2rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+
 }
 
 .card {
     padding: 3rem 2.2rem;
     background-color: rgb(255, 255, 255);
     border-radius: 1.2rem;
-    margin: 3rem;
 }
 
 .card-header {
