--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -26,7 +26,7 @@
 
 header {
     position: relative;
-    padding: 4.5rem 2rem;
+    padding: 1rem 2rem;
 }
 
 .nav_bar {
@@ -112,6 +112,7 @@ header {
     max-width: 1200px;
     margin: auto;
     padding: 5rem 1rem;
+    padding-bottom: 11.7rem;
 }
 
 .section_description {
