--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -89,7 +89,11 @@ header {
     max-width: 600px;
     margin-inline: auto;
     display: flex;
-    width: 60%;
+    width: 100%;
+}
+
+.main_img {
+    margin-left: 10rem;
 }
 
 .main_content h1 {
@@ -187,10 +191,11 @@ header {
 }
 
 .section-title {
-    font-size: 2.4rem;
-    line-height: 4.4rem;
+    font-size: 2.3rem;
+    line-height: 3rem;
     margin-bottom: 2.2rem;
     color: black;
+    font-weight: 300;
 }
 
 .card-group {
@@ -226,13 +231,13 @@ header {
 
 .card-title {
     font-size: 1.9rem;
-    line-height: 3.3rem;
+    line-height: 3rem;
     font-weight: 600;
     margin-bottom: 1.5rem;
 }
 
 .card-body p {
-    line-height: 2.5rem;
+    line-height: 2rem;
 }
 
 @media (min-width: 992px) {
@@ -284,6 +289,10 @@ header {
     }
     .main_content h1 {
         font-size: 2.5rem; 
+    }
+
+    .main_img {
+        margin-left: 0rem;
     }
 
 }
