--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -151,7 +151,7 @@ header {
 }
 
 .btn:hover {
-    background-color: rgb(0, 223, 223);
+    background-color: #820685;
 }
 
 .nav_ul a::after {
@@ -192,7 +192,7 @@ header {
 .section-metadata {
     text-align: center;
     font-weight: 500;
-    color: rgb(255, 0, 0);
+    color: #4c034d;
     line-height: 2.4rem;
     margin-bottom: 0.8rem;
 }
@@ -248,16 +248,7 @@ header {
     line-height: 2rem;
 }
 
-.shape {
-    background-image: linear-gradient(#8b028d, #4c034d);
-    width: 50%;
-    height: 100%;
-    position: absolute;
-    border-radius: 100% 30% 0% 20%;
-    top: 0;
-    right: 0;
-    z-index: 1;
-}
+
 
 .main_img {
     z-index: 999;
@@ -317,6 +308,8 @@ header {
     .main_img {
         margin-left: 0rem;
     }
+
+    
 }
 
 @media (max-width: 575px) {
