--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -327,9 +327,11 @@ header {
 .section-title1 {
     color: #4c034d;
     font-size: 1.563rem;
+    text-align: center;
 }
 
 .section-subtitle {
+    text-align: center;
     font-size: 2.1875rem;
 }
 
@@ -339,9 +341,11 @@ header {
     justify-content: center;
     gap: 24px;
     margin-top: 32px;
+    padding: 2rem;
 }
 
 .dish {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -349,6 +353,42 @@ header {
     gap: 18px;
     width: 25%;
     padding: 20px;
-    background-color: #820685;
+    background-color: #ffffff;
     box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+}
+
+.dish-heart {
+    position: absolute;
+    background-color: #4c034d;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.563rem;
+    color: rgb(255, 217, 0);
+    width: 70px;
+    height: 70px;
+    right: -10px;
+    top: -10px;
+    border-radius: 0px 0px 0px 50px;
+    display: none;
+}
+
+.dish-description {
+    text-align: center;
+}
+
+.dish-price {
+    align-items: center;
+}
+
+@media screen and (max-width: 1170px) {
+    #dishes {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .dish {
+        width: calc(50% - 12px);
+    }
 }
