--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -308,7 +308,7 @@ header {
     }
 
     .section_container {
-        padding: 3rem 0  1rem 1rem;
+        padding: 3rem 0 1rem 1rem;
     }
 }
 
@@ -402,6 +402,50 @@ header {
     }
 
     #menu .section-subtitle {
+        text-align: center;
+    }
+
+    .about {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .about-img {
+        text-align: center;
+    }
+}
+
+.about {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    gap: 4rem;
+}
+
+.about-img img {
+    width: 100%;
+    height: auto;
+}
+
+.about-text h2 {
+    font-size: 2.5rem;
+    line-height: 1.3;
+    margin-bottom: 2rem;
+}
+
+.about-text p {
+    color: #fb00ff;
+    line-height: 30px;
+    font-size: 1rem;
+    margin-bottom: 3rem;
+}
+
+@media screen and (max-width: 860px) {
+
+    .about {
+        grid-template-columns: 1fr;
+    }
+
+    .about-img {
         text-align: center;
     }
 }
