--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -27,7 +27,7 @@ body {
 }
 
 .nav_link:hover {
-    color: chartreuse;
+    color: rgb(255, 166, 0);
 }
 
 header {
@@ -185,7 +185,7 @@ header {
 }
 
 .what-we-serve {
-    padding: 10rem 0;
+    padding: 10rem 0 0 0;
     background-color: rgba(243, 238, 227, 0.966);
 }
 
@@ -421,6 +421,7 @@ header {
     gap: 4rem;
     max-width: 1300px;
     margin: auto;
+    padding-top: 10rem;
 }
 
 .about-img img {
@@ -436,7 +437,7 @@ header {
 }
 
 .about-text p {
-    color: #fb00ff;
+    color: #000000;
     line-height: 30px;
     font-size: 1rem;
     margin-bottom: 3rem;
@@ -461,6 +462,19 @@ header {
     }
 
     .about-img img {
-        width: 60%;
+        width: 70%;
     }
+}
+
+.btn-menu {
+    border-radius: 30px;
+    padding: 10px 20px;
+    background-color: #4c034d;
+    border: none;
+    cursor: pointer;
+    font-weight: 600;
+    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s ease;
+    color: rgb(255, 255, 255);
+    font-size: 1rem;
 }
