--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -387,6 +387,8 @@ header {
 
 .dish-price {
     align-items: center;
+    display: flex;
+    gap: 2rem;
 }
 
 @media screen and (max-width: 1170px) {
@@ -481,4 +483,54 @@ header {
     transition: background-color 0.3s ease;
     color: rgb(255, 255, 255);
     font-size: 1rem;
+}
+
+.customers-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, auto));
+    gap: 1.5rem;
+    margin-top: 2rem;
+    padding: 2rem;
+}
+
+.costumers-box {
+    padding: 20px;
+    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
+    border-radius: 0.5rem;
+    text-align: center;
+    background-color: #ffffff;
+}
+
+.stars .fa-star,
+.fa-star-half-stroke {
+    color: rgb(255, 196, 0);
+}
+
+.costumers-box p {
+    font-size: 0.938rem;
+}
+
+.costumers-box h2 {
+    font-size: 1.2rem;
+    font-weight: 600;
+    margin: 0.5rem 0 0.5rem;
+}
+
+.costumers-box img {
+    width: 90px;
+    height: 90px;
+    border-radius: 50;
+    object-fit: cover;
+}
+
+.heading {
+    text-align: center;
+    font-weight: 500;
+    color: #4c034d;
+    line-height: 2.4rem;
+    margin-bottom: 0.8rem;
+}
+.review {
+    margin-top: 10rem;
+    margin-bottom: 10rem;
 }
