--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -336,7 +336,7 @@ span .section-tagline {
     }
 }
 
-#menu {
+.menu {
     display: flex;
     flex-direction: column;
     justify-content: center;
