--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,145 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("header.css");
+@import url("home.css");
+@import url('service.css');
+@import url('about.css');
+@import url('menu.css');
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
-}
-
-body {
-    background-color: rgba(243, 238, 227, 0.966);
-}
-
-.nav_item {
-    list-style: none;
-}
-
-.nav_ul a {
-    text-decoration: none;
-    position: relative;
-    font-weight: 600;
-    transition: all ease 0.5s;
-    padding: 5px 5px;
-    margin: 0px 15px;
-    color: #4c034d;
-    font-size: 1.1rem;
-}
-
-.nav_link:hover {
-    color: rgb(255, 166, 0);
-}
-
-header {
-    position: relative;
-    padding: 1rem 2rem;
-    position: sticky;
-    top: 0;
-    background-color: rgba(243, 238, 227, 0.966);
-    z-index: 99;
-}
-
-.nav_bar {
-    width: 100%;
-    height: 60px;
-    max-width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.nav_ul {
-    display: flex;
-    gap: 2rem;
-}
-
-.logo img {
-    font-size: 2rem;
-}
-
-.btn_menu {
-    font-size: 1.5rem;
-    cursor: pointer;
-    display: none;
-}
-
-.drop_menu {
-    position: absolute;
-    right: 2rem;
-    top: 60px;
-    width: 300px;
-    height: 0;
-    background: rgba(249, 255, 249, 0.164);
-    backdrop-filter: blur(15px);
-    border-radius: 10px;
-    overflow: hidden;
-    transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    display: none;
-}
-
-.drop_menu.open {
-    height: 240px;
-}
-
-.drop_menu li {
-    padding: 0.7rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.main_container {
-    display: grid;
-    gap: 2rem;
-    overflow: hidden;
-    position: relative;
-}
-
-.main_img img {
-    max-width: 600px;
-    margin-inline: auto;
-    display: flex;
-    width: 100%;
-}
-
-.main_img {
-    margin-left: 10rem;
-}
-
-.main_content h1 {
-    margin-bottom: 1rem;
-    font-size: 3.5rem;
-    font-weight: 700;
-    line-height: 4.5rem;
-    text-align: center;
-}
-
-.main_content .section_description {
-    margin-bottom: 2rem;
-}
-
-.main_btn {
-    text-align: center;
-}
-
-.section_container {
-    max-width: 1200px;
-    margin: auto;
-    padding: 10rem 1rem;
-}
-
-.section_description {
-    line-height: 1.75rem;
-    text-align: center;
-}
-
-.main_imgdown img {
-    max-width: 100%;
-    margin-inline: auto;
-    display: flex;
-    width: 100%;
-    margin-top: 3rem;
 }
 
 .btn {
@@ -154,395 +24,13 @@ header {
     color: rgb(255, 255, 255);
 }
 
-.btn:hover {
-    background-color: #820685;
-}
-
-.nav_ul a::after {
-    position: absolute;
-    content: "";
-    height: 3px;
-    bottom: 0px;
-    width: 0;
-    left: 50%;
-    transform: translate(-50%);
-    border-radius: 2px;
-    background: rgb(255, 166, 0);
-    transition: all ease 0.5s;
-}
-
-.nav_ul a:hover::after {
-    width: 40%;
-}
-
-.nav_ul a.active {
-    color: rgb(255, 166, 0);
-}
-
-.nav_ul a.active::after {
-    width: 40%;
-}
-
-.card_header img {
-    width: 80px;
-    height: 50px;
-}
-
-.what-we-serve {
-    padding: 10rem 0 0 0;
-    background-color: rgba(243, 238, 227, 0.966);
-}
-
-span .section-tagline {
-    text-align: center;
-    font-weight: 500;
-    color: #4c034d;
-    line-height: 2.4rem;
-    margin-bottom: 0.8rem;
-}
-
-.section-metadata {
-    text-align: center;
-    font-weight: 500;
-    color: #4c034d;
-    line-height: 2.4rem;
-    margin-bottom: 0.8rem;
-}
-
-.section-title {
-    font-size: 2.3rem;
-    line-height: 3rem;
-    margin-bottom: 2.2rem;
-    color: black;
-    font-weight: 300;
-}
-
-.card-group {
-    margin: 7rem 0 2rem;
-    gap: 2rem;
-    margin-left: 2rem;
-    margin-right: 2rem;
-}
-
-.card {
-    padding: 3rem 2.2rem;
-    background-color: #ffffff;
-    border-radius: 1.2rem;
-    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
-}
-
-.card-header {
-    display: flex;
-}
-
 .d-grid {
     display: grid;
 }
 
-.card-header img {
-    height: 6rem;
-    margin: 0 auto;
+.btn:hover {
+    background-color: #820685;
 }
 
-.card-body {
-    text-align: center;
-    margin: 6rem 0 2rem;
-}
 
-.card-title {
-    font-size: 1.9rem;
-    line-height: 3rem;
-    font-weight: 600;
-    margin-bottom: 1.5rem;
-}
 
-.card-body p {
-    line-height: 2rem;
-}
-
-.main_img {
-    z-index: 9;
-}
-
-@media (min-width: 992px) {
-    .main_container {
-        grid-template-columns: 2fr 3fr;
-        align-items: center;
-    }
-
-    .main_content h1,
-    .main_content .section_description,
-    .main_btn {
-        text-align: left;
-    }
-    .main_img {
-        grid-area: 1/2/2/3;
-    }
-
-    .section-metadata {
-        text-align: left;
-    }
-
-    .what-we-serve .section-metadata {
-        text-align: center;
-    }
-
-    .section-title {
-        font-size: 3.2rem;
-    }
-
-    .card-group {
-        grid-template-columns: repeat(3, 1fr);
-        column-gap: 2.4rem;
-    }
-}
-
-@media (max-width: 992px) {
-    .nav_bar .nav_ul {
-        display: none;
-    }
-    .nav_bar .btn_menu {
-        display: block;
-    }
-
-    .drop_menu {
-        display: block;
-    }
-    .main_img img {
-        max-width: 300px;
-    }
-    .main_content h1 {
-        font-size: 2.5rem;
-    }
-
-    .main_img {
-        margin-left: 0rem;
-    }
-
-    .section_container {
-        padding: 3rem 0 1rem 1rem;
-    }
-
-    .btn-menu {
-        display: none;
-    }
-}
-
-@media (max-width: 575px) {
-    .drop_menu {
-        top: 100px;
-        left: 2rem;
-        width: unset;
-    }
-}
-
-.menu {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-}
-
-.section-title1 {
-    color: #4c034d;
-    font-size: 1.563rem;
-    text-align: center;
-}
-
-.section-subtitle {
-    text-align: center;
-    font-size: 2.1875rem;
-}
-
-#dishes {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    gap: 24px;
-    margin-top: 32px;
-    padding: 2rem;
-}
-
-.dish {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 20px;
-    gap: 18px;
-    width: 25%;
-    padding: 20px;
-    background-color: #ffffff;
-    box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-}
-
-.dish-heart {
-    position: absolute;
-    background-color: #4c034d;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1.563rem;
-    color: rgb(255, 217, 0);
-    width: 70px;
-    height: 70px;
-    right: -10px;
-    top: -10px;
-    border-radius: 0px 0px 0px 50px;
-}
-
-.dish-description {
-    text-align: center;
-}
-
-.dish-price {
-    align-items: center;
-    display: flex;
-    gap: 2rem;
-}
-
-@media screen and (max-width: 1170px) {
-    #dishes {
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    .dish {
-        width: calc(50% - 12px);
-    }
-}
-
-@media screen and (max-width: 660px) {
-    .dish {
-        width: 100%;
-    }
-
-    #menu .section-subtitle {
-        text-align: center;
-    }
-
-    .about {
-        grid-template-columns: repeat(2, 1fr);
-    }
-
-    .about-img {
-        text-align: center;
-    }
-}
-
-.about {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
-    gap: 4rem;
-    max-width: 1300px;
-    margin: auto;
-    padding-top: 10rem;
-}
-
-.about-img img {
-    width: 100%;
-    height: auto;
-}
-
-.about-text h2 {
-    font-size: 2.5rem;
-    line-height: 1.3;
-    margin-bottom: 2rem;
-    padding: 2rem;
-}
-
-.about-text p {
-    color: #000000;
-    line-height: 30px;
-    font-size: 1rem;
-    margin-bottom: 3rem;
-    padding: 2rem;
-}
-
-@media screen and (max-width: 860px) {
-    .about {
-        grid-template-columns: 1fr;
-    }
-
-    .about-img {
-        text-align: center;
-    }
-
-    .about-text h2 {
-        text-align: center;
-    }
-
-    .about-text p {
-        align-items: center;
-    }
-
-    .about-img img {
-        width: 70%;
-    }
-}
-
-.btn-menu {
-    border-radius: 30px;
-    padding: 10px 20px;
-    background-color: #4c034d;
-    border: none;
-    cursor: pointer;
-    font-weight: 600;
-    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
-    transition: background-color 0.3s ease;
-    color: rgb(255, 255, 255);
-    font-size: 1rem;
-}
-
-.customers-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, auto));
-    gap: 1.5rem;
-    margin-top: 2rem;
-    padding: 2rem;
-}
-
-.costumers-box {
-    padding: 20px;
-    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
-    border-radius: 0.5rem;
-    text-align: center;
-    background-color: #ffffff;
-}
-
-.stars .fa-star,
-.fa-star-half-stroke {
-    color: rgb(255, 196, 0);
-}
-
-.costumers-box p {
-    font-size: 0.938rem;
-}
-
-.costumers-box h2 {
-    font-size: 1.2rem;
-    font-weight: 600;
-    margin: 0.5rem 0 0.5rem;
-}
-
-.costumers-box img {
-    width: 90px;
-    height: 90px;
-    border-radius: 50;
-    object-fit: cover;
-}
-
-.heading {
-    text-align: center;
-    font-weight: 500;
-    color: #4c034d;
-    line-height: 2.4rem;
-    margin-bottom: 0.8rem;
-}
-.review {
-    margin-top: 10rem;
-    margin-bottom: 10rem;
-}
