--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -11,11 +11,10 @@
 }
 
 .section-title1 {
-    color: #4c034d;
+    color: var(--primary-color1);
     font-size: 1.563rem;
     text-align: center;
 }
-
 
 .section-subtitle {
     text-align: center;
@@ -41,18 +40,18 @@
     width: 25%;
     padding: 20px;
     background-color: #ffffff;
-    box-shadow: 0px 0px 12px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--box-shadow-1);
     overflow: hidden;
 }
 
 .dish-heart {
     position: absolute;
-    background-color: #4c034d;
+    background-color: var(--primary-color);
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 1.563rem;
-    color: rgb(255, 217, 0);
+    color: var(--secondary-yellow);
     width: 70px;
     height: 70px;
     right: -10px;
@@ -60,11 +59,8 @@
     border-radius: 0px 0px 0px 50px;
 }
 
-
-
 .dish-price {
     align-items: center;
     display: flex;
     gap: 2rem;
 }
-
