--- a/src/styles/reviews.css
+++ b/src/styles/reviews.css
@@ -1,27 +1,23 @@
-
 .review {
-    margin-top: 10rem;
-    margin-bottom: 10rem;
+    min-height: 100vh;
 }
 .customers-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, auto));
     gap: 1.5rem;
-    margin-top: 2rem;
-    padding: 2rem;
 }
 
 .heading {
     text-align: center;
     font-weight: 500;
-    color: #4c034d;
+    color: var(--primary-color-1);
     line-height: 2.4rem;
     margin-bottom: 0.8rem;
 }
 
 .costumers-box {
     padding: 20px;
-    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--box-shadow-1);
     border-radius: 0.5rem;
     text-align: center;
     background-color: #ffffff;
@@ -29,7 +25,7 @@
 
 .stars .fa-star,
 .fa-star-half-stroke {
-    color: rgb(255, 196, 0);
+    color: var(--secondary-yellow);
 }
 
 .costumers-box p {
