--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,9 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("header.css");
 @import url("home.css");
-@import url('service.css');
-@import url('about.css');
-@import url('menu.css');
+@import url("service.css");
+@import url("about.css");
+@import url("menu.css");
+@import url("mediaqueries.css");
+@import url("reviews.css");
 
 * {
     padding: 0;
@@ -11,26 +13,41 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
+:root {
+    --primary-color-1: #4c034d;
+    --primary-color-2: #820685;
+    --primary-yellow: rgb(255, 166, 0);
+    --secondary-yellow: rgb(255, 196, 0);
+}
+
+:root {
+    --box-shadow-1: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
+}
+
+body {
+    background-color: rgba(243, 238, 227, 0.966);
+}
+
+section {
+    padding: 28px 8%
+}
 
 .btn {
     border-radius: 30px;
     padding: 15px 25px;
-    background-color: #4c034d;
+    background-color: var(--primary-color-1);
     border: none;
     cursor: pointer;
     font-weight: 600;
-    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
+    box-shadow: var(--box-shadow-1);
     transition: background-color 0.3s ease;
     color: rgb(255, 255, 255);
+}
+
+.btn:hover {
+    background-color: var(--primary-color-1);
 }
 
 .d-grid {
     display: grid;
 }
-
-.btn:hover {
-    background-color: #820685;
-}
-
-
-
