--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,6 +1,5 @@
 .main_container {
-    min-height: calc(100vh - 92px);
-    padding: 28px 8%;
+    min-height: 100vh;
 }
 .section_container {
     max-width: 1500px;
