--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -21,11 +21,13 @@
 }
 
 
+
 :root {
     --box-shadow-1: 0px 0px 10px 2px rgba(0, 0, 0, 0.1);
 }
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
