--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -130,7 +130,7 @@ footer {
 
     .dish {
         color: rgb(255, 255, 255);
-        background-color: #3c3c3c;
+        background-color: #313338;
     }
 
     #review {
