--- a/src/styles/mediaqueries.css
+++ b/src/styles/mediaqueries.css
@@ -17,7 +17,7 @@
         text-align: left;
     }
 
-    .what-we-serve .section-metadata {
+    .service .section-metadata {
         text-align: center;
     }
 
