--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -10,15 +10,22 @@
     text-align: center;
 }
 
-.section-title1 {
-    color: var(--primary-color1);
-    font-size: 1.563rem;
+.menu-title {
     text-align: center;
+    font-weight: 600;
+    color: var(--primary-color-1);
+    line-height: 2.4rem;
+    margin-bottom: 0.8rem;
+    font-size: 1.5rem;
 }
 
-.section-subtitle {
+.menu-subtitle {
     text-align: center;
-    font-size: 2.1875rem;
+    font-size: 2rem;
+    line-height: 2rem;
+    margin-bottom: 2.2rem;
+    color: black;
+    font-weight: 300;
 }
 
 #dishes {
@@ -46,7 +53,7 @@
 
 .dish-heart {
     position: absolute;
-    background-color: var(--primary-color);
+    background-color: var(--primary-color-1);
     display: flex;
     align-items: center;
     justify-content: center;
