--- a/src/styles/reviews.css
+++ b/src/styles/reviews.css
@@ -9,10 +9,11 @@
 
 .heading {
     text-align: center;
-    font-weight: 500;
+    font-weight: 600;
     color: var(--primary-color-1);
     line-height: 2.4rem;
     margin-bottom: 0.8rem;
+    font-size: 1rem;
 }
 
 .costumers-box {
