--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -113,7 +113,7 @@ body {
     color: #25d366;
 }
 .social-media .fa-instagram {
-    color: #d400f0;
+    color: #b800f0;
 }
 
 .social-media .fa-facebook {
