--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,6 +1,6 @@
 header {
     position: relative;
-    padding: 28px 8%;
+    padding: 0 8%;
     position: sticky;
     top: 0;
     background-color: rgba(243, 238, 227, 0.966);
