--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,50 +1,26 @@
-.main_container {
-    min-height: calc(100vh - 60px);
-}
-.section_container {
-    max-width: 1250px;
-    margin: auto;
-}
-
-.main_container {
+.home {
     display: grid;
-    gap: 2rem;
-    overflow: hidden;
-    position: relative;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    max-width: 1500px;
+    margin: auto;
+    min-height: calc(100vh - 20vh);
 }
 
-.main_img {
-    margin-left: 10rem;
+.home-title h2 {
+    font-size: 2.4rem;
+    padding: 1rem;
 }
 
-.main_img {
-    z-index: 9;
+.home-title p {
+    color: #000000;
+    line-height: 30px;
+    font-size: 1rem;
+    padding: 1rem;
+    padding-right: 50px;
 }
 
-.main_img img {
-    max-width: 600px;
-    margin-inline: auto;
-    display: flex;
+.home-img img {
     width: 100%;
-}
-
-.main_content h1 {
-    margin-bottom: 1rem;
-    font-size: 3.5rem;
-    font-weight: 700;
-    line-height: 4.5rem;
-    text-align: center;
-}
-
-.main_content .section_description {
-    margin-bottom: 2rem;
-}
-
-.section_description {
-    line-height: 1.75rem;
-    text-align: center;
-}
-
-.main_btn {
-    text-align: center;
+    height: auto;
 }
