--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -10,6 +10,7 @@
 .home-title h2 {
     font-size: 2.4rem;
     padding: 1rem;
+    text-align: center;
 }
 
 .home-title p {
@@ -17,10 +18,22 @@
     line-height: 30px;
     font-size: 1rem;
     padding: 1rem;
-    padding-right: 50px;
+    text-align: center;
 }
 
 .home-img img {
     width: 100%;
     height: auto;
+}
+
+.btn-menu {
+        border-radius: 30px;
+        padding: 10px 15px;
+        background-color: var(--primary-color-1);
+        border: none;
+        cursor: pointer;
+        font-weight: 600;
+        box-shadow: var(--box-shadow-1);
+        transition: background-color 0.3s ease;
+        color: rgb(255, 255, 255);
 }
